# trace-slice

./: Cargo.toml  README.md
src/: def_use.rs  insn_class.rs  lib.rs  main.rs  parser.rs  scanner.rs  slicer.rs  types.rs  validate.rs
tests/: test_slicing.rs
tests/fixtures/: alu_flags_csel.trace  basic_chain.trace  branch_variants.trace  control_dep.trace  dead_code.trace  ldp_precision_separate_stores.trace  load_store_pair.trace  mem_last.trace  multiply_extend.trace  pass_through.trace  reg_at.trace  reg_at_fallback.trace  scalar_rmw.trace  seq_range.trace  simd_lane_load.trace  simd_rmw.trace  stp_ldp_precision_second_reg.trace  stp_precision_partial_read.trace  sysreg_float.trace  vector_pair.trace
